Checkes firmware versions does not trigger upgrade

--- a/src/system-plugins/software-update-alert/public/webcomponents/orov-software-update-router.html
+++ b/src/system-plugins/software-update-alert/public/webcomponents/orov-software-update-router.html
@@ -24,6 +24,8 @@
               status.progress;
 
               switch(status.progress){
+                  case "Examining":
+                  break;
                   case "InProgress":
                     self.set('updateInProgress',true);
                     self.set('applet','_updates');
