--- a/src/plugins/new-ui/public/webcomponents/depth.html
+++ b/src/plugins/new-ui/public/webcomponents/depth.html
@@ -218,7 +218,7 @@
             $(self.$.depthLock).addClass('hidden');
           }
           });
-          emitter.withHistory.on('plugin.diveprofile.watertype', function (data) {
+          emitter.withHistory.on('plugin.diveProfile.waterType', function (data) {
             self.waterType = data.watertype;
           });
         },
